--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-markdown": "^9.0.1",
     "react-zoom-pan-pinch": "^3.6.1"
   },
   "devDependencies": {
